- correct bugs on ie - add squareClass and squareOpacity options
git-svn-id: http://svn.jgotti.net/jqueryToolkit/trunk@11 113d30c4-b292-4fcb-822f-cdb5e9a56acc

--- a/src/plugins/measure/jquery.tk.measure.css
+++ b/src/plugins/measure/jquery.tk.measure.css
@@ -16,8 +16,6 @@
 }
 .tk-measure-square{
 	border:dotted black 1px;
-	opacity:.5;
-	background:#eee;
 	position:absolute;
 	padding:0;
 	margin:0;
